# router-assignments

./: .gitignore  README.md
assignment-1/: CMakeLists.txt  README.md  plan.md
assignment-1/automated-run/: automated-connection-gen.sh  connection-gen.py  results.csv  results.txt  run_simulator.py
assignment-1/include/: Controller.hpp  Logging.hpp  NetworkDefs.hpp  Simulator.hpp
assignment-1/parser-lib/: CMakeLists.txt
assignment-1/parser-lib/include/: CommandLineParser.hpp
assignment-1/parser-lib/src/: CommandLineParser.cpp
assignment-1/parser-lib/test/: cli.json  test_main.cpp
assignment-1/report/figures/fig1/: data.csv  fig1.py
assignment-1/report/figures/fig2/: data.csv  fig2.py
assignment-1/report/literatur/: archivebib.bib  bibliography.bib
assignment-1/report/src/: dataset.tex  endofdocument.tex  packages.tex  titlepage.tex
assignment-1/src/: Controller.cpp  NetworkDefs.cpp  Simulator.cpp  main.cpp
assignment-1/tests/: CMakeLists.txt  TablesAndConnections.cpp
assignment-2/: CMakeLists.txt  README.md
assignment-2/include/: Benes.hpp  Delta.hpp  Logging.hpp  Omega.hpp  Switch.hpp  SwitchNetwork.hpp
assignment-2/parser-lib/: CMakeLists.txt
assignment-2/parser-lib/include/: ArgumentInfo.hpp  ArgumentType.hpp  Logging.hpp
assignment-2/parser-lib/src/: Argument.cpp
assignment-2/parser-lib/test/: CMakeLists.txt  test_main.cpp
assignment-2/src/: Benes.cpp  Delta.cpp  Omega.cpp  Switch.cpp  SwitchNetwork.cpp  main.cpp  params.json
assignment-2/testcases/: Benes_8.txt  Benes_8_out.tx  Benes_8_out.txt  Omega_8_out.txt
assignment-3/: CMakeLists.txt  COMMENTS.txt  README.md
assignment-3/include/: Logging.h  Packet.hpp  Simulator.hpp  Switch.hpp  TrafficGenerator.hpp
assignment-3/parser-lib/include/: Argument.hpp
assignment-3/report/: main.tex
assignment-3/report/figures/: fig1.py  fig2.py  output.csv  wrapper.py
assignment-3/report/figures/fig1/: data.csv  fig1.py
assignment-3/report/figures/fig2/: delay_data.csv  fig2.py  utilization_data.csv
assignment-3/report/literatur/: bibliography.bib
assignment-3/report/src/: dataset.tex  endofdocument.tex  packages.tex  titlepage.tex
assignment-3/src/: Simulator.cpp  TrafficGenerator.cpp  main.cpp  params.json
assignment-3/test/: CMakeLists.txt  test_main.cpp
assignment-4/report/figures/fig1/: fig1.py
assignment-4/report/src/: dataset.tex  endofdocument.tex  titlepage.tex
assignment-4/solutions/: CMakeLists.txt
assignment-4/solutions/include/: Packet.h  PacketGen.h  Scheduler.h  Simulator.h
assignment-4/solutions/parser-lib/include/: ArgumentInfo.hpp  CommandLineParser.hpp
assignment-4/solutions/parser-lib/src/: ArgumentInfo.cpp
assignment-4/solutions/src/: Main.cpp  PacketGen.cpp  Scheduler.cpp  params.json
assignment-4/solutions/test/: CMakeLists.txt  test_main.cpp
assignment-5/: CMakeLists.txt  STL_Usage.txt
assignment-5/include/: htrie.h  simulator.h
assignment-5/parser-lib/include/: CommandLineParser.hpp
assignment-5/parser-lib/src/: CMakeLists.txt
assignment-5/src/: main.cpp  params.json  simulator.cpp
assignment-5/test/: CMakeLists.txt  test_main.cpp
